--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description"content="React Retrospective Board" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <script type="text/javascript">
       ; window.NREUM || (NREUM = {}); NREUM.init = { distributed_tracing: { enabled: true }, privacy: { cookies_enabled: true }, ajax: { deny_list: ["bam.nr-data.net"] } };
 
@@ -62,7 +64,10 @@
     <script>
       $(function() {
         console.log( "ready!" );
-        $(".dropdown-trigger").dropdown();
+        $(".dropdown-trigger").dropdown({ hover: false });
+        $(document).ready(function () {
+          $('.collapsible').collapsible();
+        });
         const ctx = document.getElementById('myChart');
         new Chart(ctx, {
           type: 'bar',
