Update app title

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <title>oneretro</title>
+    <title>oneretro | All your team needs and more!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -62,6 +62,7 @@
       $(function() {
         console.log( "ready!" );
         $(".dropdown-trigger").dropdown({ hover: false });
+        $('.tooltipped').tooltip();
         $(document).ready(function () {
           $('.collapsible').collapsible();
         });
